coaching sustainability moved

--- a/auto_style.css
+++ b/auto_style.css
@@ -1,97 +1,15 @@
 body {
-  /*
   background-image: url("https://img.freepik.com/premium-photo/colorful-background-banner-template-decorative-design-layout-your-ideas-with-space-text_7954-6875.jpg?w=360");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
-  background-attachment: fixed;*/
-  background-color: #ffffc5;
+  background-attachment: fixed;
   margin: 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 200vh;
-  flex-direction: column;
-  overflow-y: scroll;
-  overflow-x: hidden;
-}
-
-@font-face {
-  font-family: 'SuisseIntl';
-  src: url('font/SuisseIntl-Medium.otf') format('opentype');
-  font-weight: normal;
-  font-style: normal;
-}
-
-html {
-  scroll-snap-type: y mandatory;
-}
-
-.container {
-  width: 100%;
-  height: 50%;
-  scroll-snap-align: start;
-  scroll-snap-stop: always;
-}
-
-#intro {
-  background: linear-gradient( #007480, #ffffc5);
-}
-
-.banner {
-  position: absolute;
-  top: 3%;
-  left: 5%;
-  width: 90%;
-  height: 15%;
-  display: flex;
-  justify-content: left;
-  Justify-content: space-between;
-  font-size: 28px;
-  font-weight: bold;
-  font-family: 'SuisseIntl';
-  color: #fff;
-}
-.appetizer {
-  position: absolute;
-  top: 20%;
-  left: 5%;
-  width: 90%;
-  height: 80%;
-  display: flex;
-  justify-content: space-between;
-  flex-direction: row;
-  font-size: large;
-  font-family: 'SuisseIntl';
-  color: #fff;
-}
-.appetizer .text {
-  width: 60%;
-  height: 100%;
-}
-
-.appetizer .text h1 {
-  font-size: 32px;
-  font-weight: bold;
-  font-family: 'SuisseIntl';
-}
-.appetizer .text p {
-  margin-top: 20%;
-  font-size: 22px;
-  font-family: 'SuisseIntl';
-}
-.appetizer img {
-  float: right;
-  width: 90%;
-  object-fit: contain;
-}
-
-#content {
-  background-color: #ffffc5;
-  /*background: radial-gradient(circle farthest-side, #ffffc5, #f9f946);*/
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  height: 100vh;
+  overflow: hidden;
 }
 
 .bubble {
@@ -104,27 +22,22 @@ html {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  z-index: 2;
 }
 
 .bubble img {
-  max-width: 60%;
-  max-height: 50%;
+  max-width: 70%;
+  max-height: 60%;
   object-fit: contain;
-  z-index: 2;
 }
 
 .bubble span {
-  font-size: 16px;
   object-fit: contain;
-  font-family: 'SuisseIntl';
-  z-index: 2;
-  font-weight:700;
 }
 
 .bubble:hover {
+  background-color: #39ff15 !important;
   transition: background-color 0.2s ease;
-  z-index: 3;
+  z-index: 2;
 }
 
 .smaller {
@@ -133,7 +46,7 @@ html {
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 2;
+  z-index: 1;
 }
 
 .smaller a {
@@ -145,8 +58,8 @@ html {
 }
 
 .smaller img {
-  max-width:100%;
-  max-height: 100%;
+  max-width:70%;
+  max-height: 70%;
   object-fit: contain;
 }
 
@@ -162,13 +75,11 @@ html {
   opacity: 0; 
   z-index: 1; 
   text-align: left;
-  font-family: 'SuisseIntl';
   transition: opacity 0.2s ease;
 }
 
 .text-description h3 {
   margin: 0;
-  font-family: 'SuisseIntl';
   font-size: 18px;
   color: #fff;
   margin-bottom: 5px;
@@ -178,37 +89,19 @@ html {
 .smaller:hover .text-description {
   visibility: visible;
   opacity: 1;
-  z-index: 3;
-}
-
-.text-description:hover {
-  display: none;
-}
-
-.border {
-  position: absolute;
-  background-color: transparent;
-  width:318px;
-  height: 318px;
-  border-radius: 50%;
-  z-index: 1;
+  z-index: 2;
 }
 
 /*category 1*/
 
 #bubble1 {
-  background-color: #c5c6ff;
+  background-color: #BEFCFF;
   transform: translate(-400px,-125px) rotate(0deg);
 }
 
 #bubble1 .text-description {
   left: 100%;
   top: 0%;
-}
-
-
-#border1{
-  border: 3px solid #c5c6ff;
 }
 
 #EPFLCourses {
@@ -218,28 +111,33 @@ html {
 
 #CSAWClimateSustainabilityActionWeek {
   background-color: transparent;
-  transform: translate( -119px, -39px ) rotate(0deg);
+  transform: translate( -109px, -63px ) rotate(0deg);
 }
 
 #lecanardhuppé {
   background-color: transparent;
-  transform: translate( -74px, 102px ) rotate(0deg);
+  transform: translate( -109px, 63px ) rotate(0deg);
 }
 
 #Fresqueduclimat {
   background-color: transparent;
-  transform: translate( 74px, 102px ) rotate(0deg);
+  transform: translate( -0px, 126px ) rotate(0deg);
 }
 
 #Semainedeladurabilité {
   background-color: transparent;
-  transform: translate( 119px, -39px ) rotate(0deg);
+  transform: translate( 109px, 63px ) rotate(0deg);
+}
+
+#CoachingSustainability {
+  background-color: transparent;
+  transform: translate( 109px, -63px ) rotate(0deg);
 }
 
 /*category 2*/
 
 #bubble2 {
-  background-color: #ff4d4d;
+  background-color: #DEFFFA;
   transform: translate(-200px,125px) rotate(0deg);
 }
 
@@ -248,79 +146,66 @@ html {
   bottom: 0%;
 }
 
-#border2{
-  border: 3px solid #ff4d4d;
-}
-
-#associationdébouchésdurables {
-  background-color: transparent;
-  transform: translate( -114px, -52px ) rotate(0deg);
-}
-
-#CoachingSustainability {
-  background-color: transparent;
-  transform: translate( -68px, -106px ) rotate(0deg);
-}
-
 #Slowtacarrière {
   background-color: transparent;
   transform: translate( 0px, -126px ) rotate(0deg);
 }
 
+#associationdébouchésdurables {
+  background-color: transparent;
+  transform: translate( -74px, -102px ) rotate(0deg);
+}
+
 #Pointvélo {
   background-color: transparent;
-  transform: translate( -124px, 18px ) rotate(0deg);
+  transform: translate( -120px, -39px ) rotate(0deg);
 }
 
 #Bibliothèqued’objets {
   background-color: transparent;
-  transform: translate( -95px, 82px ) rotate(0deg);
+  transform: translate( -120px, 39px ) rotate(0deg);
 }
 
 #Fixn’ReplaceRepaircafé {
   background-color: transparent;
-  transform: translate( -35px, 120px ) rotate(0deg);
+  transform: translate( -74px, 102px ) rotate(0deg);
 }
 
 #EpiceriecoopérativeleVorace {
   background-color: transparent;
-  transform: translate( 35px, 120px ) rotate(0deg);
+  transform: translate( -0px, 126px ) rotate(0deg);
 }
 
 #MarchéEPFL {
   background-color: transparent;
-  transform: translate( 95px, 82px ) rotate(0deg);
+  transform: translate( 74px, 102px ) rotate(0deg);
 }
 
 #PointSmartCellphones {
   background-color: transparent;
-  transform: translate( 124px, 18px ) rotate(0deg);
+  transform: translate( 120px, 39px ) rotate(0deg);
 }
 
 #CastorFreegan {
   background-color: transparent;
-  transform: translate( 114px, -52px ) rotate(0deg);
+  transform: translate( 120px, -39px ) rotate(0deg);
 }
 
 #Meubléco {
   background-color: transparent;
-  transform: translate( 68px, -106px ) rotate(0deg);
+  transform: translate( 74px, -102px ) rotate(0deg);
 }
 
 /*category 3*/
 
 #bubble3 {
-  background-color: #95F823;
+  background-color: #FFDAF5;
   transform: translate(0px,-125px) rotate(0deg);
 }
 
 #bubble3 .text-description {
   left: 100%;
   top: 0%;
-}
-
-#border3{
-  border: 3px solid #95F823;
 }
 
 #LaConvergence {
@@ -335,42 +220,42 @@ html {
 
 #Queermanence {
   background-color: transparent;
-  transform: translate( -114px, -52px ) rotate(0deg);
+  transform: translate( -115px, -52px ) rotate(0deg);
 }
 
 #Polyquity {
   background-color: transparent;
-  transform: translate( -124px, 18px ) rotate(0deg);
+  transform: translate( -125px, 18px ) rotate(0deg);
 }
 
 #PlanQueer {
   background-color: transparent;
-  transform: translate( -95px, 82px ) rotate(0deg);
+  transform: translate( -95px, 83px ) rotate(0deg);
 }
 
 #Ingénieur·esdumonde {
   background-color: transparent;
-  transform: translate( -35px, 120px ) rotate(0deg);
+  transform: translate( -35px, 121px ) rotate(0deg);
 }
 
 #AmnestydesHautesEcolesLausannoises {
   background-color: transparent;
-  transform: translate( 35px, 120px ) rotate(0deg);
+  transform: translate( 35px, 121px ) rotate(0deg);
 }
 
 #ZeroEmissionGroup {
   background-color: transparent;
-  transform: translate( 95px, 82px ) rotate(0deg);
+  transform: translate( 95px, 83px ) rotate(0deg);
 }
 
 #Associationdesétudiant·esvégan·esetanimalistes {
   background-color: transparent;
-  transform: translate( 124px, 18px ) rotate(0deg);
+  transform: translate( 125px, 18px ) rotate(0deg);
 }
 
 #FermedeBassenges {
   background-color: transparent;
-  transform: translate( 114px, -52px ) rotate(0deg);
+  transform: translate( 115px, -52px ) rotate(0deg);
 }
 
 #ThriftstoreUPFashionLab {
@@ -381,17 +266,13 @@ html {
 /*category 4*/
 
 #bubble4 {
-  background-color: #ff70a6;
+  background-color: #B0E1FF;
   transform: translate(200px,125px) rotate(0deg);
 }
 
 #bubble4 .text-description {
   right: 100%;
   bottom: 0%;
-}
-
-#border4{
-  border: 3px solid #ff70a6;
 }
 
 #Make {
@@ -401,7 +282,7 @@ html {
 
 #Durabilis {
   background-color: transparent;
-  transform: translate( -119px, -39px ) rotate(0deg);
+  transform: translate( -120px, -39px ) rotate(0deg);
 }
 
 #Skil {
@@ -416,23 +297,19 @@ html {
 
 #Ucreate {
   background-color: transparent;
-  transform: translate( 119px, -39px ) rotate(0deg);
+  transform: translate( 120px, -39px ) rotate(0deg);
 }
 
 /*category 5*/
 
 #bubble5 {
-  background-color: #70d6ff;
+  background-color: #E6C6FF;
   transform: translate(400px,-125px) rotate(0deg);
 }
 
 #bubble5 .text-description {
   right: 100%;
   top: 0%;
-}
-
-#border5{
-  border: 3px solid #70d6ff;
 }
 
 #SportscenterEPFL-UNIL {
@@ -442,7 +319,7 @@ html {
 
 #Espace-Transitions {
   background-color: transparent;
-  transform: translate( -119px, -39px ) rotate(0deg);
+  transform: translate( -120px, -39px ) rotate(0deg);
 }
 
 #TrustandSupportNetworkTSN {
@@ -457,5 +334,5 @@ html {
 
 #ForêtdeDorigny {
   background-color: transparent;
-  transform: translate( 119px, -39px ) rotate(0deg);
+  transform: translate( 120px, -39px ) rotate(0deg);
 }
