--- a/auto_style.css
+++ b/auto_style.css
@@ -1,65 +1,269 @@
 body {
-  background-image: url("https://img.freepik.com/premium-photo/colorful-background-banner-template-decorative-design-layout-your-ideas-with-space-text_7954-6875.jpg?w=360");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-attachment: fixed;
+  /*background: url(https://www.transparenttextures.com/patterns/arches.png) repeat #ffffc5;*/
+  background: #ffffc5;
   margin: 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  flex-direction: column;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+@font-face {
+  font-family: 'SuisseIntl';
+  src: url('font/SuisseIntl-Medium.otf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'SuisseIntlLight';
+  src: url('font/SuisseIntl-Light.otf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+/*for mobiles*/
+
+.container {
+  background-color: transparent;
+  display: flex;
+  width: 100%;
+  height: auto;
+  flex-direction: column;
+}
+
+#intro {
+  height: 700px;
+  background: linear-gradient(#47d9e9, transparent 100%);
+}
+
+#subbubbles {
+  display: none;
+}
+
+.banner {
+  position: absolute;
+  top: 0%;
+  left: 5%;
+  width: 90%;
+  height: auto;
+  display: flex;
+  align-items: center;
+  Justify-content: space-between;
+  font-weight: bold;
+  font-family: 'SuisseIntl';
+  color: #000;
+  border-bottom: 1px solid #000;
+  z-index: 1;
+}
+
+.banner .title {
+  font-size: 16px;
+  font-weight: bold;
+  font-family: 'SuisseIntl';
+}
+
+.banner .lang {
+  display: flex;
+  justify-content: flex-end;
+  width: 33%;
+}
+
+/* Custom dropdown */
+.dropdown {
+  width: 100%;
+  display: inline-block;
+  position: relative;
+  margin-bottom: -5px;
+  font-size: 18px;
+}
+
+.dropdown.toggle>input {
+  display: none;
+}
+
+.dropdown>a,
+.dropdown.toggle>label {
+  border-radius: 2px;
+}
+
+.dropdown>a::after,
+.dropdown.toggle>label::after {
+  content: "";
+  margin: 15px 15px 0 0;
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-top: 10px solid black;
+}
+
+.dropdown ul {
+  list-style-type: none;
+  display: block;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  width: 100%;
+  box-shadow: 0 6px 5px -5px rgba(0, 0, 0, 0.3);
   overflow: hidden;
 }
 
+.dropdown a,
+.dropdown.toggle>label {
+  display: block;
+  padding: 0 0 0 10px;
+  text-decoration: none;
+  line-height: 40px;
+  font-size: 13px;
+  text-transform: uppercase;
+  font-weight: bold;
+  color: black;
+  background-color: transparent;
+}
+
+.dropdown li {
+  height: 0;
+  overflow: hidden;
+  transition: all 500ms;
+
+}
+
+.dropdown.hover li {
+  transition-delay: 300ms;
+}
+
+.dropdown li:first-child a {
+  border-radius: 2px 2px 0 0;
+}
+
+.dropdown li:last-child a {
+  border-radius: 0 0 2px 2px;
+}
+
+.dropdown a:hover,
+.dropdown.toggle>label:hover,
+.dropdown.toggle>input:checked~label {
+  background-color: transparent;
+  color: #f5f5f5;
+}
+
+.dropdown.toggle>label:hover::after,
+.dropdown.toggle>input:checked~label::after {
+  border-top-color: #f5f5f5;
+}
+
+.dropdown.toggle>input:checked~ul li {
+  height: 35px;
+}
+
+/* Custom dropdown */
+.appetizer {
+  position: relative;
+  top: 12%;
+  left: 5%;
+  width: 90%;
+  height: 90%;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  font-size: large;
+  color: #000;
+}
+
+.appetizer .text {
+  width: 100%;
+  height: 100%;
+}
+
+.appetizer .text h1 {
+  font-size: 32px;
+  font-weight: bold;
+  font-family: 'SuisseIntl';
+}
+
+.appetizer .text p {
+  margin-top: 3%;
+  font-size: 20px;
+  font-family: 'SuisseIntlLight';
+}
+
+.appetizer .image img {
+  display: none;
+}
+
+#content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
 .bubble {
-  position: absolute;
+  position: relative;
   width: 150px;
   height: 150px;
+  margin: 100px;
   border-radius: 50%;
   cursor: pointer;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
-
-.bubble img {
-  max-width: 70%;
-  max-height: 60%;
-  object-fit: contain;
-}
-
-.bubble span {
-  object-fit: contain;
-}
-
-.bubble:hover {
-  background-color: #39ff15 !important;
-  transition: background-color 0.2s ease;
   z-index: 2;
 }
 
+.bubble img {
+  position: relative;
+  max-width: 60%;
+  max-height: 50%;
+  object-fit: contain;
+  z-index: 2;
+}
+
+.bubble span {
+  position: relative;
+  font-size: 20px;
+  object-fit: contain;
+  font-family: 'SuisseIntl';
+  z-index: 2;
+  font-weight: 700;
+}
+
 .smaller {
-  width: 70px;
-  height: 70px;
+  position: absolute;
+  width: 60%;
+  height: 45%;
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 1;
+  z-index: 2;
 }
 
 .smaller a {
   display: flex;
-  align-items: center; 
-  justify-content: center; 
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
   width: 100%;
   height: 100%;
+  text-decoration: none;
+  color: #000;
+}
+
+.smaller a span {
+  text-decoration: none;
+  color: #000;
+  font-family: "SuisseIntl";
+  font-size: 15px;
+  text-align: center;
 }
 
 .smaller img {
-  max-width:70%;
-  max-height: 70%;
+  max-width: 100%;
+  max-height: 100%;
   object-fit: contain;
 }
 
@@ -72,267 +276,453 @@ body {
   white-space: normal;
   width: 500%;
   visibility: hidden;
-  opacity: 0; 
-  z-index: 1; 
+  opacity: 0;
+  z-index: 1;
   text-align: left;
+  font-family: 'SuisseIntl';
   transition: opacity 0.2s ease;
 }
 
 .text-description h3 {
   margin: 0;
+  font-family: 'SuisseIntl';
   font-size: 18px;
   color: #fff;
   margin-bottom: 5px;
   text-align: center;
 }
 
-.smaller:hover .text-description {
-  visibility: visible;
-  opacity: 1;
-  z-index: 2;
+.border {
+  position: absolute;
+  width: 320px;
+  height: 320px;
+  border-radius: 50%;
+  z-index: 1;
 }
 
-/*category 1*/
 
-#bubble1 {
-  background-color: #BEFCFF;
-  transform: translate(-400px,-125px) rotate(0deg);
+
+@media only screen and (min-width: 1050px) {
+
+  /* For Desktops: */
+  body {
+    height: 200vh;
+  }
+
+  html {
+    scroll-snap-type: y mandatory;
+  }
+
+  .container {
+    width: 100%;
+    height: 50% !important;
+    scroll-snap-align: start;
+    scroll-snap-stop: always;
+  }
+
+  .banner {
+    height: 9%;
+    align-items: end;
+  }
+
+  .banner .title {
+    font-size: 32px;
+  }
+
+  .banner .lang {
+    display: flex;
+    justify-content: flex-end;
+    width: 10%;
+  }
+
+  .appetizer {
+    top: 10%;
+  }
+
+  .appetizer .text {
+    width: 35%;
+    height: 100%;
+  }
+
+  #subbubbles {
+    display: block;
+    width: 60%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .sub-bubble {
+    position: relative;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #fff;
+  }
+
+  .sub-bubble img {
+    position: relative;
+    max-width: 60%;
+    max-height: 50%;
+    object-fit: contain;
+  }
+
+  #subbubble1 {
+    transform: translateY(-50%);
+    background: radial-gradient(circle farthest-side, #a6a7ff, transparent 100%);
+  }
+
+  #subbubble2 {
+    transform: translateY(50%);
+    background: radial-gradient(circle farthest-side, #fb8b0c, transparent 100%);
+  }
+
+  #subbubble3 {
+    transform: translateY(-50%);
+    background: radial-gradient(circle farthest-side, #95F823, transparent 100%);
+  }
+
+  #subbubble4 {
+    transform: translateY(50%);
+    background: radial-gradient(circle farthest-side, #ff70a6, transparent 100%);
+  }
+
+  #subbubble5 {
+    transform: translateY(-50%);
+    background: radial-gradient(circle farthest-side, #70d6ff, transparent 100%);
+  }
+
+  .bubble {
+    position: absolute;
+  }
+
+  .bubble span {
+    font-size: 20px;
+    font-weight: 700;
+  }
+
+  .bubble:hover {
+    transition: background-color 0.2s ease;
+    z-index: 3;
+  }
+
+  .smaller {
+    width: 95px;
+    height: 70px;
+  }
+
+  .text-description {
+    position: absolute;
+    padding: 7px;
+    color: #000;
+    border-radius: 5px;
+    white-space: normal;
+    width: 500%;
+    visibility: hidden;
+    opacity: 0;
+    z-index: 1;
+    text-align: left;
+    font-family: 'SuisseIntl';
+    transition: opacity 0.2s ease;
+  }
+
+  .text-description h3 {
+    margin: 0;
+    font-family: 'SuisseIntl';
+    font-size: 18px;
+    color: #000;
+    margin-bottom: 5px;
+    text-align: center;
+  }
+
+  .smaller:hover .text-description {
+    visibility: visible;
+    opacity: 1;
+    z-index: 3;
+  }
+
+  .text-description:hover {
+    display: none;
+  }
+
+  /*category 1*/
+
+  #bubble1 {
+    transform: translate(-400px, -140px);
+  }
+
+  #bubble1 .text-description {
+    left: 100%;
+    top: 0%;
+    background-color: #a6a7ff;
+  }
+
+  /*category 2*/
+
+  #bubble2 {
+    transform: translate(-200px, 140px);
+  }
+
+  #bubble2 .text-description {
+    left: 100%;
+    bottom: 0%;
+    background-color: #ffac4e;
+  }
+
+  /*category 3*/
+
+  #bubble3 {
+    transform: translate(0px, -140px);
+  }
+
+  #bubble3 .text-description {
+    left: 100%;
+    top: 0%;
+    background-color: #9ffc36;
+  }
+
+  /*category 4*/
+
+  #bubble4 {
+    transform: translate(200px, 140px);
+  }
+
+  #bubble4 .text-description {
+    right: 100%;
+    bottom: 0%;
+    background-color: #fda4c6;
+  }
+
+  /*category 5*/
+
+  #bubble5 {
+    transform: translate(400px, -140px);
+  }
+
+  #bubble5 .text-description {
+    right: 100%;
+    top: 0%;
+    background-color: #54cbfa;
+  }
+
 }
 
-#bubble1 .text-description {
-  left: 100%;
-  top: 0%;
-}
+/*Category 1*/
 
-#EPFLCourses {
-  background-color: transparent;
-  transform: translate( 0px, -126px ) rotate(0deg);
-}
-
-#CSAWClimateSustainabilityActionWeek {
-  background-color: transparent;
-  transform: translate( -109px, -63px ) rotate(0deg);
-}
-
-#lecanardhuppé {
-  background-color: transparent;
-  transform: translate( -109px, 63px ) rotate(0deg);
-}
-
-#Fresqueduclimat {
-  background-color: transparent;
-  transform: translate( -0px, 126px ) rotate(0deg);
+#border1 {
+  background: radial-gradient(circle farthest-side, #a6a7ff, transparent 100%);
 }
 
 #Semainedeladurabilité {
   background-color: transparent;
-  transform: translate( 109px, 63px ) rotate(0deg);
+  transform: translate(0px, -126px);
+}
+
+#CSAWClimateSustainabilityActionWeek {
+  background-color: transparent;
+  transform: translate(-109px, -63px);
+}
+
+#lecanardhuppé {
+  background-color: transparent;
+  transform: translate(-109px, 63px);
 }
 
 #CoachingSustainability {
   background-color: transparent;
-  transform: translate( 109px, -63px ) rotate(0deg);
+  transform: translate(-0px, 126px);
 }
 
-/*category 2*/
-
-#bubble2 {
-  background-color: #DEFFFA;
-  transform: translate(-200px,125px) rotate(0deg);
+#EPFLCourses {
+  background-color: transparent;
+  transform: translate(109px, 63px);
 }
 
-#bubble2 .text-description {
-  left: 100%;
-  bottom: 0%;
+#Fresqueduclimat {
+  background-color: transparent;
+  transform: translate(109px, -63px);
+}
+
+/*Category 2*/
+
+#border2 {
+  background: radial-gradient(circle farthest-side, #fb8b0c, transparent 100%);
 }
 
 #Slowtacarrière {
   background-color: transparent;
-  transform: translate( 0px, -126px ) rotate(0deg);
+  transform: translate(0px, -126px);
 }
 
 #associationdébouchésdurables {
   background-color: transparent;
-  transform: translate( -74px, -102px ) rotate(0deg);
-}
-
-#Pointvélo {
-  background-color: transparent;
-  transform: translate( -120px, -39px ) rotate(0deg);
-}
-
-#Bibliothèqued’objets {
-  background-color: transparent;
-  transform: translate( -120px, 39px ) rotate(0deg);
-}
-
-#Fixn’ReplaceRepaircafé {
-  background-color: transparent;
-  transform: translate( -74px, 102px ) rotate(0deg);
-}
-
-#EpiceriecoopérativeleVorace {
-  background-color: transparent;
-  transform: translate( -0px, 126px ) rotate(0deg);
-}
-
-#MarchéEPFL {
-  background-color: transparent;
-  transform: translate( 74px, 102px ) rotate(0deg);
-}
-
-#PointSmartCellphones {
-  background-color: transparent;
-  transform: translate( 120px, 39px ) rotate(0deg);
-}
-
-#CastorFreegan {
-  background-color: transparent;
-  transform: translate( 120px, -39px ) rotate(0deg);
+  transform: translate(-74px, -102px);
 }
 
 #Meubléco {
   background-color: transparent;
-  transform: translate( 74px, -102px ) rotate(0deg);
+  transform: translate(-120px, -39px);
 }
 
-/*category 3*/
-
-#bubble3 {
-  background-color: #FFDAF5;
-  transform: translate(0px,-125px) rotate(0deg);
-}
-
-#bubble3 .text-description {
-  left: 100%;
-  top: 0%;
-}
-
-#LaConvergence {
+#Bibliothèqued’objets {
   background-color: transparent;
-  transform: translate( 0px, -126px ) rotate(0deg);
+  transform: translate(-120px, 39px);
+}
+
+#Fixn’ReplaceRepaircafé {
+  background-color: transparent;
+  transform: translate(-74px, 102px);
+}
+
+#Pointvélo {
+  background-color: transparent;
+  transform: translate(-0px, 126px);
+}
+
+#PointSmartCellphones {
+  background-color: transparent;
+  transform: translate(74px, 102px);
+}
+
+#MarchéEPFL {
+  background-color: transparent;
+  transform: translate(120px, 39px);
+}
+
+#EpiceriecoopérativeleVorace {
+  background-color: transparent;
+  transform: translate(120px, -39px);
+}
+
+#CastorFreegan {
+  background-color: transparent;
+  transform: translate(74px, -102px);
+}
+
+/*Category 3*/
+
+#border3 {
+  background: radial-gradient(circle farthest-side, #95F823, transparent 100%);
 }
 
 #Unipoly {
   background-color: transparent;
-  transform: translate( -68px, -106px ) rotate(0deg);
-}
-
-#Queermanence {
-  background-color: transparent;
-  transform: translate( -115px, -52px ) rotate(0deg);
+  transform: translate(0px, -126px);
 }
 
 #Polyquity {
   background-color: transparent;
-  transform: translate( -125px, 18px ) rotate(0deg);
+  transform: translate(-68px, -106px);
 }
 
 #PlanQueer {
   background-color: transparent;
-  transform: translate( -95px, 83px ) rotate(0deg);
+  transform: translate(-114px, -52px);
 }
 
-#Ingénieur·esdumonde {
+#Queermanence {
   background-color: transparent;
-  transform: translate( -35px, 121px ) rotate(0deg);
-}
-
-#AmnestydesHautesEcolesLausannoises {
-  background-color: transparent;
-  transform: translate( 35px, 121px ) rotate(0deg);
+  transform: translate(-124px, 18px);
 }
 
 #ZeroEmissionGroup {
   background-color: transparent;
-  transform: translate( 95px, 83px ) rotate(0deg);
+  transform: translate(-95px, 82px);
 }
 
-#Associationdesétudiant·esvégan·esetanimalistes {
+#LaConvergence {
   background-color: transparent;
-  transform: translate( 125px, 18px ) rotate(0deg);
+  transform: translate(-35px, 120px);
+}
+
+#Ingénieur·esdumonde {
+  background-color: transparent;
+  transform: translate(35px, 120px);
 }
 
 #FermedeBassenges {
   background-color: transparent;
-  transform: translate( 115px, -52px ) rotate(0deg);
+  transform: translate(95px, 82px);
+}
+
+#Associationdesétudiant·esvégan·esetanimalistes {
+  background-color: transparent;
+  transform: translate(124px, 18px);
+}
+
+#AmnestydesHautesEcolesLausannoises {
+  background-color: transparent;
+  transform: translate(114px, -52px);
 }
 
 #ThriftstoreUPFashionLab {
   background-color: transparent;
-  transform: translate( 68px, -106px ) rotate(0deg);
+  transform: translate(68px, -106px);
 }
 
-/*category 4*/
+/*Category 4*/
 
-#bubble4 {
-  background-color: #B0E1FF;
-  transform: translate(200px,125px) rotate(0deg);
-}
-
-#bubble4 .text-description {
-  right: 100%;
-  bottom: 0%;
-}
-
-#Make {
-  background-color: transparent;
-  transform: translate( 0px, -126px ) rotate(0deg);
-}
-
-#Durabilis {
-  background-color: transparent;
-  transform: translate( -120px, -39px ) rotate(0deg);
-}
-
-#Skil {
-  background-color: transparent;
-  transform: translate( -74px, 102px ) rotate(0deg);
+#border4 {
+  background: radial-gradient(circle farthest-side, #ff70a6, transparent 100%);
 }
 
 #EPFLChangemakers {
   background-color: transparent;
-  transform: translate( 74px, 102px ) rotate(0deg);
+  transform: translate(0px, -126px);
 }
 
 #Ucreate {
   background-color: transparent;
-  transform: translate( 120px, -39px ) rotate(0deg);
+  transform: translate(-119px, -39px);
 }
 
-/*category 5*/
-
-#bubble5 {
-  background-color: #E6C6FF;
-  transform: translate(400px,-125px) rotate(0deg);
+#Make {
+  background-color: transparent;
+  transform: translate(-74px, 102px);
 }
 
-#bubble5 .text-description {
-  right: 100%;
-  top: 0%;
+#Durabilis {
+  background-color: transparent;
+  transform: translate(74px, 102px);
+}
+
+#Skil {
+  background-color: transparent;
+  transform: translate(119px, -39px);
+}
+
+/*Category 5*/
+
+#border5 {
+  background: radial-gradient(circle farthest-side, #70d6ff, transparent 100%);
 }
 
 #SportscenterEPFL-UNIL {
   background-color: transparent;
-  transform: translate( 0px, -126px ) rotate(0deg);
+  transform: translate(0px, -126px);
 }
 
 #Espace-Transitions {
   background-color: transparent;
-  transform: translate( -120px, -39px ) rotate(0deg);
+  transform: translate(-119px, -39px);
 }
 
 #TrustandSupportNetworkTSN {
   background-color: transparent;
-  transform: translate( -74px, 102px ) rotate(0deg);
+  transform: translate(-74px, 102px);
 }
 
 #Guidedmeditation {
   background-color: transparent;
-  transform: translate( 74px, 102px ) rotate(0deg);
+  transform: translate(74px, 102px);
 }
 
 #ForêtdeDorigny {
   background-color: transparent;
-  transform: translate( 120px, -39px ) rotate(0deg);
+  transform: translate(119px, -39px);
 }
