--- a/style.css
+++ b/style.css
@@ -340,11 +340,14 @@ body {
     margin-top: 2%;
     float: right;
     width: 60%;
+    height: 80%;
+    object-fit: contain;
   }
 
   .appetizer .image img {
     display: block;
-    width: 100%;
+    max-width: 100%;
+    max-height: 100%;
     object-fit: contain;
   }
 
