--- a/auto_style.css
+++ b/auto_style.css
@@ -423,6 +423,14 @@ body {
 
   .bubble{
     height: 100%;
+    width: auto;
+    aspect-ratio: 1;
+  }
+
+  .border{
+    height: 100%;
+    width: auto;
+    aspect-ratio: 1;
   }
 
   .bubble span {
